# dscode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DS Code PRD.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.dscode/: config.toml  graph.html
.dscode/spec/: architecture.md  safety.md
.github/workflows/: build-windows.yml
benchmarks/: coding_tasks.json
config/: default.toml
crates/dscode-cli/: Cargo.toml
crates/dscode-cli/src/: main.rs
crates/dscode-core/: Cargo.toml
crates/dscode-core/src/: lib.rs
crates/dscode-core/src/agent/: compression.rs  context.rs  error_withholding.rs  forge.rs  mod.rs  stream.rs
crates/dscode-core/src/auto/: decomposer.rs  mod.rs  runner.rs  stall.rs
crates/dscode-core/src/config/: settings.rs
crates/dscode-core/src/extensions/: mcp.rs  skills.rs
crates/dscode-core/src/magi/: execute.rs  mod.rs  promote.rs  scheduler.rs  scrutinize.rs
crates/dscode-core/src/memory/: fact.rs  fts.rs  mod.rs  pattern.rs  raw.rs  scribe.rs  store.rs
crates/dscode-core/src/plan/: active.rs  interview.rs  llm_interview.rs  mod.rs  phases.rs  prd.rs
crates/dscode-core/src/providers/: anthropic.rs  deepseek.rs  factory.rs  mod.rs  openai.rs  trait_def.rs
crates/dscode-core/src/safety/: guard.rs  mod.rs  permission.rs
crates/dscode-core/src/session/: manager.rs  mod.rs
crates/dscode-core/src/teams/: board.rs  config.rs  control.rs  dispatcher.rs  merge.rs  mod.rs  monitor.rs  orchestrator.rs  ownership.rs  phase.rs  role.rs  runtime.rs  schema.rs
crates/dscode-core/src/tools/: background.rs  bash.rs  file_ops.rs  mcp_ops.rs  mod.rs  registry.rs  skill_ops.rs  trait_def.rs  web.rs
crates/dscode-core/src/wiki/: engine.rs  export.rs  graph.rs  inductive.rs  ingestor.rs  mod.rs  search.rs
crates/dscode-core/tests/: forge_magi_integration.rs  teams_v2_unit.rs
crates/dscode-desktop/: Cargo.toml  tauri.conf.json
crates/dscode-desktop/capabilities/: default.json
crates/dscode-desktop/icons/: icon.icns
crates/dscode-desktop/src/: app_state.rs  attachments.rs  events.rs  lib.rs  main.rs
crates/dscode-desktop/src/commands/: chat.rs  config.rs  mcp.rs  mod.rs  session.rs  wiki.rs
crates/dscode-desktop/ui/: count_validation.txt  index.html  package-lock.json  package.json  rust_files_manifest.txt  tailwind.config.js  vite.config.ts
crates/dscode-desktop/ui/src/: App.tsx  main.tsx
crates/dscode-desktop/ui/src/components/: icons.tsx
crates/dscode-desktop/ui/src/components/Airplane/: Airplane.tsx
crates/dscode-desktop/ui/src/components/Chat/: ChatArea.tsx  FactCard.tsx  InputBox.tsx  MessageBubble.tsx  PermissionBanner.tsx  PlanChoiceCard.tsx  StreamingRenderer.tsx  TeamPanel.tsx  ThinkingBlock.tsx  ToolCallCard.tsx
crates/dscode-desktop/ui/src/components/Settings/: McpPage.tsx  SettingsPage.tsx  SkillsPage.tsx  WikiGraph.tsx  WikiPage.tsx
crates/dscode-desktop/ui/src/components/Sidebar/: GlobalPromptModal.tsx  NewSessionModal.tsx  SessionItem.tsx  SessionList.tsx  Sidebar.tsx
crates/dscode-desktop/ui/src/hooks/: useStreamEvents.ts
crates/dscode-desktop/ui/src/lib/: models.ts  tauri.ts  types.ts
crates/dscode-desktop/ui/src/stores/: chatStore.ts  configStore.ts  sessionStore.ts
crates/dscode-desktop/ui/src/styles/: globals.css
crates/dscode-tui/: Cargo.toml
crates/dscode-tui/src/: app.rs  events.rs  main.rs  theme.rs
crates/dscode-tui/src/ui/: cards.rs  chat.rs  input.rs  mod.rs  sidebar.rs  status.rs  thinking.rs
src/dscode/: __init__.py  __main__.py  cli.py  config.py
src/dscode/bench/: __init__.py  comparator.py  runner.py
src/dscode/core/: __init__.py  anvil.py  forge.py  scribe.py  types.py
src/dscode/deepseek/: __init__.py  auto_router.py  cache_stable.py  client.py  fim.py  prefix_completion.py  strict_tools.py  telemetry.py  thinking.py
src/dscode/graph/: __init__.py  builder.py  exporter.py
src/dscode/magi/: __init__.py  execute.py  promote.py  scheduler.py  scrutinize.py
src/dscode/plan/: __init__.py  grill_me.py  prd_generator.py  spec_loader.py
src/dscode/providers/: __init__.py  anthropic_compat.py  litellm_adapter.py
src/dscode/safety/: __init__.py  fail_closed.py  file_guard.py  timeout.py
src/dscode/skills/: __init__.py  loader.py
src/dscode/templates/: conventions.md
src/dscode/tools/: __init__.py  bash.py  file_ops.py  fim_tool.py  git_ops.py  grep.py  lsp_query.py  mcp_adapter.py  mcp_servers.example.json  registry.py  side_git.py  test_runner.py
src/dscode/tui/: __init__.py  activity.py  app.py  chat.py  dscode.tcss  events.py  session.py  status.py
tests/integration/: test_cli.py  test_e2e_run.py
tests/unit/: test_bench.py  test_deepseek.py  test_deepseek_advanced.py  test_forge.py  test_graph.py  test_magi.py  test_magi_router.py  test_mcp.py  test_plan.py  test_providers.py  test_scribe.py  test_session.py  test_skills.py  test_tools.py  test_tui_widgets.py
