[project]
name = "dscode"
version = "0.1.0"
description = "DeepSeek-native, cross-model code agent вҖ” PlanвҶ’MAGIвҶ’Reflect spiral with cache-stable architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ZAY" }]
keywords = ["agent", "deepseek", "code-agent", "llm", "ai"]

dependencies = [
    # LLM clients
    "openai>=1.50",         # DeepSeek з”Ё OpenAI е…је®№
    "httpx>=0.27",

    # CLI / TUI
    "typer>=0.12",
    "rich>=13.7",
    "textual>=1.0",

    # Data / validation
    "pydantic>=2.8",
    "pyyaml>=6.0",

    # Storage
    # sqlite3 жҳҜ Python ж ҮеҮҶеә“

    # Safety / snapshot
    "zstandard>=0.22",

    # Graph (v1 д»…еҚ дҪҚйӘЁжһ¶)
    "networkx>=3.0",
]

[project.optional-dependencies]
providers = [
    "litellm>=1.50",        # и·ЁжЁЎеһӢйҖӮй…ҚпјҲOpenAI / Gemini / Ollama зӯүпјү
    "anthropic>=0.40",      # Claude еҗҺз«Ҝ + DeepSeek Anthropic е…је®№з«ҜзӮ№
]
mcp = [
    # MCPпјҲModel Context ProtocolпјүдёҖзӯүе…¬ж°‘ж”ҜжҢҒгҖӮжңӘе®үиЈ…ж—¶
    # dscode.tools.mcp_adapter д»ҚеҸҜ importпјҢдҪҶжүҖжңү MCP server дјҡиў«ж Үи®°дёә
    # дёҚеҸҜз”ЁпјҢдё»жөҒзЁӢдёҚеҸ—еҪұе“ҚгҖӮ
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
tree-sitter = [
    "tree-sitter>=0.21",
    "tree-sitter-languages>=1.10",
]

[project.scripts]
dscode = "dscode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dscode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # typer.Option / typer.Argument in defaults is the standard typer pattern
    "RUF001", # ambiguous CJK punctuation in strings вҖ” intentional in Chinese docstrings
    "RUF002", # same, in docstrings
    "RUF003", # same, in comments
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
