[package]
name = "dscode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
regex.workspace = true
rand.workspace = true
base64.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
