[package]
name = "dscode-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DS Code"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
dscode-core = { path = "../dscode-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
